This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
10/21/18: Allowed continuous mode to be used for mag IS offset calibration and
enabled everything but mag button in scope control panel during this cal.

10/21/18: In continuous mode, enabled scope control panel during and made it
blank beam during operations like mag change that make transients.

10/21/18: Added alpha to low dose summary line and alpha spinner to scope
control panel.

10/21/18: Adjusted for fact that there is no nanoprobe in low mag mode.

10/17/18: Fixed a bug that crashed program trying to display custom hole
pattern when no regular hole patteren had been set up.

10/17/18: Added property to set a detector on JEOL to insert/retract
complementary to main screen.

10/17/18: Added a parameter validation call for OneView.

10/14/18: Fixed bug when saving frames with K3 and using a binning that
requires trimming the image returned to SerialEM.

10/14/18: When doing an early return with no return image, made it not roll
buffers and make another copy of the last image in A.

10/10/18: Added ability to delay setting IS after an external mag change on
JEOL.

10/10/18: Saved K2 and other direct detector processing modes (linear vs.
counting) in non-low-dose states.

10/1/18: Fixed problem with skipping numbers in the filenames when fitting
montage to polygon in New file at item.

10/1/18: Changed hot key for enabling CTF fitting from Shift-D to Ctrl-D,
which fixes multiple deletion in the Navigator with Shift-D.

10/1/18: Added a menu option to add a grid of points just like the last one,
without having to answer any queries.

10/1/18: A grid of points can now be specified by 7 points instead of 5 to
overcome inaccuracy in the inter-hole interval specified by adjacent point.
