@@ -226,6 +226,7 @@ BOOL_PROP_TEST("UseInvertedMagRange", scope->, UseInvertedMagRange)
 FLOAT_PROP_TEST("HitachiZMicronsPerGroove", mWinApp->mComplexTasks->, ZMicronsPerDialMark)
 INT_PROP_TEST("HitachiSpotStepDelay", scope->, HitachiSpotStepDelay)
 BOOL_PROP_TEST("InvertStageXAxis", shiftManager->, InvertStageXAxis)
+INT_PROP_TEST("StageInvertsZAxis", shiftManager->, StageInvertsZAxis)
 BOOL_PROP_TEST("RotateHeaderAngleBy180", mWinApp->mBufferManager->, RotateAxisAngle)
 BOOL_PROP_TEST("BackgroundSaveToFile", mWinApp->mBufferManager->, SaveAsynchronously)
 FLOAT_PROP_TEST("ResetRealignMinField", complexTasks->, MinRSRAField)
