@@ -2155,6 +2155,13 @@
             also be needed.)</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>StageInvertsZAxis</TD>
+          <TD>This property affects the direction of focus and Z height changes when 
+            accounting for tilt.&nbsp; It is defaulted to 1 on a Hitachi, where tilting 
+            around the Y axis inverts the direction of the Z axis in the &#39;specimen&#39; 
+            coordinate system.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>RotateHeaderAngleBy180</TD>
           <TD>If the tilt axis rotation angle defined by these properties results in 
             reconstructions with inverted handedness, set this entry to 1 to rotate the 
